--- a/src/lib/components/base/badges/badge/styles/_variants.scss
+++ b/src/lib/components/base/badges/badge/styles/_variants.scss
@@ -1,150 +1,138 @@
-@import '../../../../../styles/colors/MappingColorSystem/index';
 @import '../../../../../styles/typography/index.scss';
-
 
 /* badges styles */
 
 /* green */
 
 .badge-green {
-    border-color: $border-presentation-badge-green;
-    background: $background-presentation-badge-green;
+    border-color: var(--border-presentation-badge-green);
+    background: var(--background-presentation-badge-green);
 
     .badge-icon {
-        color: $content-presentation-badge-green ;
+        color: var(--content-presentation-badge-green);
     }
 }
-
 
 /* Green Light */
 
 .badge-green-light {
-    border-color: $border-presentation-badge-green-light;
-    background: $background-presentation-badge-green-light; //Background-Presentation-Badge-Green-Light
+    border-color: var(--border-presentation-badge-green-light);
+    background: var(--background-presentation-badge-green-light);
 
     .badge-icon {
-        color: $content-presentation-badge-green-light ;
+        color: var(--content-presentation-badge-green-light);
     }
-
 }
 
 /* Cocktail Green */
 
 .badge-cocktail-green {
-    border-color: $border-presentation-badge-cocktail-green;
-    background: $background-presentation-badge-cocktail-green;
+    border-color: var(--border-presentation-badge-cocktail-green);
+    background: var(--background-presentation-badge-cocktail-green);
 
     .badge-icon {
-        color: $content-presentation-badge-cocktail-green ;
+        color: var(--content-presentation-badge-cocktail-green);
     }
 }
-
 
 /* Yellow */
 
 .badge-yellow {
-    border-color: $border-presentation-badge-yellow;
-    background: $background-presentation-badge-yellow;
-
+    border-color: var(--border-presentation-badge-yellow);
+    background: var(--background-presentation-badge-yellow);
 
     .badge-icon {
-        color: $content-presentation-badge-yellow ;
+        color: var(--content-presentation-badge-yellow);
     }
 }
 
 /* Red Orange */
 
 .badge-red-orange {
-    border-color: $border-presentation-badge-red-orange;
-    background: $background-presentation-badge-red-orange;
+    border-color: var(--border-presentation-badge-red-orange);
+    background: var(--background-presentation-badge-red-orange);
 
     .badge-icon {
-        color: $content-presentation-badge-red-orange ;
+        color: var(--content-presentation-badge-red-orange);
     }
 }
-
-
 
 /* Red Light */
 
 .badge-red-light {
-    border-color: $border-presentation-badge-red;
-    background: $background-presentation-badge-red;
+    border-color: var(--border-presentation-badge-red);
+    background: var(--background-presentation-badge-red);
 
     .badge-icon {
-        color: $content-presentation-badge-red ;
+        color: var(--content-presentation-badge-red);
     }
 }
 
-
-/* Rose*/
+/* Rose */
 
 .badge-rose {
-    border-color: $border-presentation-badge-rose;
-    background: $background-presentation-badge-rose;
+    border-color: var(--border-presentation-badge-rose);
+    background: var(--background-presentation-badge-rose);
 
     .badge-icon {
-        color: $content-presentation-badge-rose ;
+        color: var(--content-presentation-badge-rose);
     }
 }
 
 /* Purple */
 
 .badge-purple {
-    border-color: $border-presentation-badge-purple;
-    background: $background-presentation-badge-purple;
+    border-color: var(--border-presentation-badge-purple);
+    background: var(--background-presentation-badge-purple);
 
     .badge-icon {
-        color: $content-presentation-badge-purple ;
+        color: var(--content-presentation-badge-purple);
     }
 }
 
 /* Blue Purple */
 
 .badge-blue-purple {
-    border-color: $border-presentation-badge-blue-purple;
-    background: $background-presentation-badge-blue-purple;
+    border-color: var(--border-presentation-badge-blue-purple);
+    background: var(--background-presentation-badge-blue-purple);
 
     .badge-icon {
-        color: $content-presentation-badge-blue-purple ;
+        color: var(--content-presentation-badge-blue-purple);
     }
-
-
 }
 
 /* Blue */
 
 .badge-blue {
-    border-color: $border-presentation-badge-blue;
-    background: $background-presentation-badge-blue;
+    border-color: var(--border-presentation-badge-blue);
+    background: var(--background-presentation-badge-blue);
 
     .badge-icon {
-        color: $content-presentation-badge-blue ;
+        color: var(--content-presentation-badge-blue);
     }
 }
 
 /* Navy */
 
 .badge-navy {
-    border-color: $border-presentation-badge-navy;
-    background: $background-presentation-badge-navy;
+    border-color: var(--border-presentation-badge-navy);
+    background: var(--background-presentation-badge-navy);
 
     .badge-icon {
-        color: $content-presentation-badge-navy ;
+        color: var(--content-presentation-badge-navy);
     }
 }
 
 /* Gray */
 
 .badge-gray {
-    border-color: $border-presentation-badge-gray;
-    background: $background-presentation-badge-gray;
+    border-color: var(--border-presentation-badge-gray);
+    background: var(--background-presentation-badge-gray);
 
     .badge-icon {
-        color: $content-presentation-badge-gray ;
+        color: var(--content-presentation-badge-gray);
     }
 }
-
 
 /* sizes */
 
@@ -172,7 +160,6 @@
         }
     }
 }
-
 
 .glare-badge-size-L {
     @include Body-typography-Medium-Medium;
