--- a/src/lib/components/base/checkBoxes/checkboxLabel/style.scss
+++ b/src/lib/components/base/checkBoxes/checkboxLabel/style.scss
@@ -1,9 +1,6 @@
 @import '../../../../styles/colors/MappingColorSystem/index';
-@import '../../../../styles/colors/CoreColorSystem/ModeOne/index';
 
 .glare-CheckboxLabel {
-
-
     .label-container {
         position: relative;
         width: 100%;
@@ -16,37 +13,35 @@
 
     .glare-CheckboxLabel-input {
         display: flex;
-
         border-radius: 3px;
-        border: 1px solid $border-presentation-action-primary;
-        background: $background-presentation-action-borderstyle;
+        border: 1px solid var(--border-presentation-action-primary);
+        background: var(--background-presentation-action-borderstyle);
         outline: none;
         transition: all 300ms ease-in-out;
 
         &:hover {
-            border: 1px solid $border-presentation-action-active;
+            border: 1px solid var(--border-presentation-action-active);
         }
 
         &:checked {
-            background: $blue-sparkle-600;
+            background: var(--blue-sparkle-600);
             box-shadow: unset;
         }
 
         &:focus {
-            border: 1px solid $border-presentation-state-focus;
+            border: 1px solid var(--border-presentation-state-focus);
         }
 
         &:active {
-            border: 1px solid $border-presentation-state-focus;
+            border: 1px solid var(--border-presentation-state-focus);
         }
 
         &:disabled {
-            border: 1px solid $border-presentation-action-disabled;
-            background: $background-presentation-action-disabled;
+            border: 1px solid var(--border-presentation-action-disabled);
+            background: var(--background-presentation-action-disabled);
         }
     }
 }
-
 
 .glare-CheckboxLabel-input-S {
     width: 14px;
