--- a/src/lib/components/base/LoginCardComponents/passwordLevel/style.scss
+++ b/src/lib/components/base/LoginCardComponents/passwordLevel/style.scss
@@ -1,10 +1,8 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-
 .password-level {
-    background: $background-system-body-secondary;
+    background: var(--background-system-body-secondary);
     border-radius: 4px;
     border-style: solid;
-    border-color: $border-system-global-primary;
+    border-color: var(--border-system-global-primary);
     border-width: 1px;
     padding: 4px;
     display: grid;
@@ -12,23 +10,22 @@
     gap: 4px;
     width: 100%;
 
-
     .nagative {
-        background: $border-system-global-secondary;
+        background: var(--border-system-global-secondary);
         border-radius: 8px;
         height: 4px;
         transition: all 300ms ease-in-out;
     }
 
     .warning {
-        background: $border-system-global-secondary;
+        background: var(--border-system-global-secondary);
         border-radius: 8px;
         height: 4px;
         transition: all 300ms ease-in-out;
     }
 
     .success {
-        background: $border-system-global-secondary;
+        background: var(--border-system-global-secondary);
         border-radius: 8px;
         height: 4px;
         transition: all 300ms ease-in-out;
@@ -37,30 +34,30 @@
 
 .weak {
     .nagative {
-        background: $border-presentation-state-negative;
+        background: var(--border-presentation-state-negative);
     }
 }
 
 .good {
     .nagative {
-        background: $border-presentation-state-negative;
+        background: var(--border-presentation-state-negative);
     }
 
     .warning {
-        background: $border-presentation-state-warning;
+        background: var(--border-presentation-state-warning);
     }
 }
 
 .great {
     .nagative {
-        background: $border-presentation-state-negative;
+        background: var(--border-presentation-state-negative);
     }
 
     .warning {
-        background: $border-presentation-state-warning;
+        background: var(--border-presentation-state-warning);
     }
 
     .success {
-        background: $border-presentation-state-success;
+        background: var(--border-presentation-state-success);
     }
 }
