--- a/src/lib/components/base/dropDowns/dropdownMenu/style.scss
+++ b/src/lib/components/base/dropDowns/dropdownMenu/style.scss
@@ -1,7 +1,4 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-
 .drop-down-menu {
-
     width: 100%;
     display: flex;
     padding: var(--Space-1, 4px);
@@ -19,15 +16,14 @@
     transition: all 300ms ease-in-out;
 }
 
-
 .drop-down-menu-Presentation-Style {
-    border: 1px $border-presentation-global-primary;
-    background: $background-presentation-form-base;
+    border: 1px solid var(--border-presentation-global-primary);
+    background: var(--background-presentation-form-base);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.40), 0px 4px 4px 0px rgba(0, 0, 0, 0.20);
 }
 
 .drop-down-menu-System-Style {
-    border: 1px solid $border-system-global-secondary;
-    background: $background-system-body-primary;
+    border: 1px solid var(--border-system-global-secondary);
+    background: var(--background-system-body-primary);
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
 }
