--- a/src/lib/components/base/fields/buttonField/style.scss
+++ b/src/lib/components/base/fields/buttonField/style.scss
@@ -1,5 +1,3 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-
 .glare-button-field {
     display: flex;
     justify-content: center;
@@ -12,7 +10,7 @@
 
     .glare-button-field-divider {
         border-style: solid;
-        border-color: $border-presentation-global-primary;
+        border-color: var(--border-presentation-global-primary);
         border-width: 1px 0 0 0;
         flex: 1;
         padding: 0 8px;
