--- a/src/lib/components/base/fields/labelLessInput/_variants.scss
+++ b/src/lib/components/base/fields/labelLessInput/_variants.scss
@@ -1,12 +1,10 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
 @import '../../../../styles/typography/index.scss';
-
 
 .glare-input-labelLess-field-focus {
 
     .input-container {
         input {
-            border-color: $border-presentation-state-focus !important;
+            border-color: var(--border-presentation-state-focus) !important;
         }
 
         .glare-input-icon {
@@ -14,37 +12,33 @@
         }
     }
 
-    border-color: $border-presentation-state-focus !important;
+    border-color: var(--border-presentation-state-focus) !important;
     box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
-    color: $content-presentation-action-light-primary !important;
+    color: var(--content-presentation-action-light-primary) !important;
 }
 
-/* negative*/
+/* negative */
 
 .glare-input-labelLess-field-negative {
-    border-color: $border-presentation-state-negative !important;
-    caret-color: $border-presentation-state-negative ;
+    border-color: var(--border-presentation-state-negative) !important;
+    caret-color: var(--border-presentation-state-negative);
 
     &:hover {
-        border-color: $border-presentation-state-negative !important;
+        border-color: var(--border-presentation-state-negative) !important;
     }
 }
 
 .glare-input-labelLess-field-disabled {
-    border-color: $border-presentation-action-disabled !important;
-    background-color: $background-presentation-action-disabled !important;
+    border-color: var(--border-presentation-action-disabled) !important;
+    background-color: var(--background-presentation-action-disabled) !important;
 
     &:hover {
-        border-color: $border-presentation-action-disabled !important;
-        background-color: $background-presentation-action-disabled !important;
+        border-color: var(--border-presentation-action-disabled) !important;
+        background-color: var(--background-presentation-action-disabled) !important;
     }
 }
 
-
-
-
 .glare-input-labelLess-has-badgesChildren {}
-
 
 /* input sizes */
 
@@ -56,7 +50,6 @@
             font-size: 16px;
         }
     }
-
 }
 
 .glare-input-labelLess-size-M {
@@ -69,33 +62,26 @@
     }
 }
 
-
 .glare-input-labelLess-size-S {
-
     height: 30px;
 
     .input-container {}
 }
 
-
-
-
-
 /* system style */
 
 .glare-input-labelLess-system-style {
-
-    border: 1px solid $border-system-global-primary;
-    background-color: $black-alpha-20;
+    border: 1px solid var(--border-system-global-primary);
+    background-color: var(--black-alpha-20);
 
     input {
         color: white !important;
-        caret-color: $content-presentation-action-hover-information;
+        caret-color: var(--content-presentation-action-hover-information);
     }
 
     &:hover {
-        background-color: $purple-alpha-10 !important;
-        border: 1px solid $border-system-action-hover-primary !important;
+        background-color: var(--purple-alpha-10) !important;
+        border: 1px solid var(--border-system-action-hover-primary) !important;
     }
 
     label {
