--- a/src/lib/components/base/fields/labelLessInput/inputLabel/style.scss
+++ b/src/lib/components/base/fields/labelLessInput/inputLabel/style.scss
@@ -1,8 +1,6 @@
-@import '../../../../../styles/colors/MappingColorSystem/index';
 @import '../../../../../styles/typography/index.scss';
 
 .glare-InputLabel-wrapper {
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,12 +14,12 @@
         transition: all 300ms ease-in-out;
 
         p {
-            color: $content-presentation-state-negative;
+            color: var(--content-presentation-state-negative);
             @include Body-typography-Small-Regular;
         }
 
         label {
-            color: $content-presentation-global-primary;
+            color: var(--content-presentation-global-primary);
             transition: all 300ms ease-in-out;
         }
     }
@@ -30,26 +28,21 @@
         height: 12px;
         width: 1px;
         border-radius: 4px;
-        border-left: 1px solid $border-presentation-action-primary;
+        border-left: 1px solid var(--border-presentation-action-primary);
         transition: all 150ms ease-in-out;
     }
 
     .glare-InputLabel-active {
-        color: $content-presentation-global-secondary !important;
+        color: var(--content-presentation-global-secondary) !important;
     }
 }
-
 
 .glare-InputLabel-focus {
     .glare-InputLabel-divider {
         height: 22px;
-        border-color: $border-presentation-action-active ;
+        border-color: var(--border-presentation-action-active);
     }
 }
-
-
-
-
 
 .glare-InputLabel-size-S {
     .glare-InputLabel-label-wrapper {
@@ -60,10 +53,8 @@
         .glare-InputLabel-active {
             @include Labels-typography-Small-Regular;
         }
-
     }
 }
-
 
 .glare-InputLabel-size-M {
     .glare-InputLabel-label-wrapper {
@@ -79,10 +70,7 @@
             @include Labels-typography-Medium-Regular;
         }
     }
-
 }
-
-
 
 .glare-InputLabel-size-L {
     .glare-InputLabel-label-wrapper {
@@ -98,5 +86,4 @@
             @include Body-typography-Small-Regular;
         }
     }
-
 }
