--- a/src/lib/components/base/fields/noteInputField/textarea/style.scss
+++ b/src/lib/components/base/fields/noteInputField/textarea/style.scss
@@ -1,4 +1,3 @@
-@import '../../../../../styles/colors/MappingColorSystem/index';
 @import '../../../../../styles/typography/index.scss';
 
 .glare-textarea-wrapper {
@@ -7,63 +6,61 @@
 
     .glare-textarea {
         width: 100%;
-        border: 1px solid $border-presentation-action-primary;
+        border: 1px solid var(--border-presentation-action-primary);
         border-radius: var(--Radius-2-max, 4px);
         padding: 12px 8px;
-        background-color: $background-presentation-form-field-primary;
+        background-color: var(--background-presentation-form-field-primary);
         outline: none;
-        color: $content-presentation-action-light-primary;
-        caret-color: $border-presentation-state-focus;
+        color: var(--content-presentation-action-light-primary);
+        caret-color: var(--border-presentation-state-focus);
         @include Body-typography-Small-Regular;
         transition: all 150ms ease-in-out;
 
         &:hover {
-            border-color: $border-presentation-action-active;
+            border-color: var(--border-presentation-action-active);
             box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
         }
 
         &:focus {
-            border-color: $border-presentation-state-focus ;
+            border-color: var(--border-presentation-state-focus);
             box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
         }
 
         &:active {
-            border-color: $border-presentation-state-focus ;
+            border-color: var(--border-presentation-state-focus);
             box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
         }
 
-
         &:disabled {
-            border-color: $border-presentation-action-disabled;
-            background-color: $border-presentation-action-disabled;
-            color: $border-presentation-action-disabled;
+            border-color: var(--border-presentation-action-disabled);
+            background-color: var(--border-presentation-action-disabled);
+            color: var(--border-presentation-action-disabled);
 
             &::placeholder {
-                color: $border-presentation-action-disabled;
+                color: var(--border-presentation-action-disabled);
             }
 
             &:hover {
-                outline-color: $border-presentation-action-disabled;
-                background-color: $background-presentation-action-disabled;
+                outline-color: var(--border-presentation-action-disabled);
+                background-color: var(--background-presentation-action-disabled);
             }
         }
     }
 
-
     .glare-textarea-negative {
-        border-color: $border-presentation-state-negative ;
-        caret-color: $border-presentation-state-negative ;
+        border-color: var(--border-presentation-state-negative);
+        caret-color: var(--border-presentation-state-negative);
 
         &:hover {
-            border-color: $border-presentation-state-negative ;
+            border-color: var(--border-presentation-state-negative);
         }
 
         &:focus {
-            border-color: $border-presentation-state-negative ;
+            border-color: var(--border-presentation-state-negative);
         }
 
         &:active {
-            border-color: $border-presentation-state-negative ;
+            border-color: var(--border-presentation-state-negative);
         }
     }
 }
