--- a/src/lib/components/base/tables/components/shared/tableCell/components/normalTableCell/style.scss
+++ b/src/lib/components/base/tables/components/shared/tableCell/components/normalTableCell/style.scss
@@ -1,5 +1,3 @@
-@import '../../../../../../../../styles/colors/MappingColorSystem/index';
-
 .glare-table-cell {
     position: relative;
     transition: all 200ms ease-in-out;
@@ -11,13 +9,12 @@
     }
 
     .glare-input-field-wrapper {
-
         border-color: transparent;
         opacity: 0;
 
         &:hover {
             opacity: 1;
-            border-color: $border-presentation-state-focus !important;
+            border-color: var(--border-presentation-state-focus) !important;
             box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30) !important;
         }
 
@@ -34,7 +31,7 @@
 
         &:hover {
             opacity: 1;
-            border-color: $border-presentation-state-focus !important;
+            border-color: var(--border-presentation-state-focus) !important;
         }
     }
 
@@ -48,8 +45,6 @@
         transform: translate(0%, -50%);
     }
 }
-
-
 
 /* sizes */
 .glare-table-cell-S {
@@ -87,8 +82,6 @@
             height: 26px !important;
         }
     }
-
-
 }
 
 .glare-table-cell-M {
@@ -118,7 +111,6 @@
             }
         }
     }
-
 
     .glare-date-picker {
         height: 30px;
