--- a/src/lib/components/base/tables/components/ui/tableIconCell/style.scss
+++ b/src/lib/components/base/tables/components/ui/tableIconCell/style.scss
@@ -1,18 +1,15 @@
-@import '../../../../../../styles/colors/MappingColorSystem/index';
-
 .TableIconCell {
     background-color: transparent;
 
     i {
         opacity: 0;
-        color: $background-presentation-action-hover;
+        color: var(--background-presentation-action-hover);
     }
 
     &:hover {
         background-color: transparent !important;
 
         i {
-            // color: white; 
             opacity: 1;
         }
     }
@@ -37,7 +34,6 @@
 }
 
 .TableIconCell-For-SubTable {
-
     background-color: transparent;
 
     .glare-button-icon {
@@ -49,7 +45,7 @@
     }
 
     &:hover {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
 
         .glare-button-icon {
             transform: rotate(90deg) !important;
@@ -63,7 +59,7 @@
     }
 
     &:focus {
-        background-color: $background-presentation-state-information-primary !important;
+        background-color: var(--background-presentation-state-information-primary) !important;
         outline: none;
 
         .glare-button-icon {
@@ -77,7 +73,7 @@
     }
 
     &:active {
-        background-color: $background-presentation-state-information-primary !important;
+        background-color: var(--background-presentation-state-information-primary) !important;
         outline: none;
 
         .glare-button-icon {
@@ -91,19 +87,14 @@
     }
 }
 
-
-
 .show-TableIconCell {
     i {
-        // color: white; 
         opacity: 1 !important;
     }
 }
 
-
 .TableIconCell-subTable-active {
-
-    background-color: $background-presentation-action-hover !important;
+    background-color: var(--background-presentation-action-hover) !important;
     outline: none;
 
     .glare-button-icon {
@@ -115,9 +106,8 @@
         }
     }
 
-
     &:hover {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -131,7 +121,7 @@
     }
 
     &:focus {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -145,7 +135,7 @@
     }
 
     &:active {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -157,15 +147,11 @@
             }
         }
     }
-
 }
-
-
 
 /* RTL */
 
 .TableIconCell-For-SubTable-RTL {
-
     background-color: transparent;
 
     .glare-button-icon {
@@ -177,7 +163,7 @@
     }
 
     &:hover {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
 
         .glare-button-icon {
             transform: rotate(-90deg) !important;
@@ -191,7 +177,7 @@
     }
 
     &:focus {
-        background-color: $background-presentation-state-information-primary !important;
+        background-color: var(--background-presentation-state-information-primary) !important;
         outline: none;
 
         .glare-button-icon {
@@ -205,7 +191,7 @@
     }
 
     &:active {
-        background-color: $background-presentation-state-information-primary !important;
+        background-color: var(--background-presentation-state-information-primary) !important;
         outline: none;
 
         .glare-button-icon {
@@ -219,10 +205,8 @@
     }
 }
 
-
 .TableIconCell-subTable-active-RTL {
-
-    background-color: $background-presentation-action-hover !important;
+    background-color: var(--background-presentation-action-hover) !important;
     outline: none;
 
     .glare-button-icon {
@@ -234,9 +218,8 @@
         }
     }
 
-
     &:hover {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -250,7 +233,7 @@
     }
 
     &:focus {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -264,7 +247,7 @@
     }
 
     &:active {
-        background-color: $background-presentation-action-hover !important;
+        background-color: var(--background-presentation-action-hover) !important;
         outline: none;
 
         .glare-button-icon {
@@ -276,5 +259,4 @@
             }
         }
     }
-
 }
