--- a/src/lib/components/base/tables/table/style.scss
+++ b/src/lib/components/base/tables/table/style.scss
@@ -1,7 +1,4 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-
 .glare-table {
-
     width: fit-content;
     overflow: scroll;
 
@@ -11,8 +8,7 @@
         }
 
         border-top: 2px solid transparent;
-        border-bottom: 2px solid $border-presentation-table-header;
+        border-bottom: 2px solid var(--border-presentation-table-header);
         transition: all 250ms ease-in-out;
     }
-
 }
