--- a/src/lib/components/base/tabs/sideFormBarItem/style.scss
+++ b/src/lib/components/base/tabs/sideFormBarItem/style.scss
@@ -1,11 +1,8 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-@import '../../../../styles/typography/index.scss';
-
 .sideFormBarItem {
     padding: 0px 8px;
     height: 36px;
     width: 100%;
-    color: $content-presentation-global-primary;
+    color: var(--content-presentation-global-primary);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,29 +10,29 @@
     overflow: hidden;
     white-space: nowrap;
     border-radius: 4px;
-    outline: 1px solid $border-presentation-global-primary;
-    background: $background-presentation-form-base;
+    outline: 1px solid var(--border-presentation-global-primary);
+    background: var(--background-presentation-form-base);
     transition: all 300ms ease-in-out;
 
     &:hover {
-        outline: 1px solid $border-presentation-global-primary;
-        background: $background-presentation-form-base;
+        outline: 1px solid var(--border-presentation-global-primary);
+        background: var(--background-presentation-form-base);
         padding: 0 16px;
     }
 
     &:focus {
         outline: unset;
-        background: $background-system-body-primary;
+        background: var(--background-system-body-primary);
         box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.15);
-        color: $content-presentation-action-dark-primary;
+        color: var(--content-presentation-action-dark-primary);
         padding: 0 16px;
     }
 
     &:active {
         outline: unset;
-        background: $background-system-body-primary;
+        background: var(--background-system-body-primary);
         box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.15);
-        color: $content-presentation-action-dark-primary;
+        color: var(--content-presentation-action-dark-primary);
         padding: 0 16px;
     }
 }
