--- a/src/lib/components/base/tabs/topFormBar-Item/style.scss
+++ b/src/lib/components/base/tabs/topFormBar-Item/style.scss
@@ -1,12 +1,9 @@
-@import '../../../../styles/colors/MappingColorSystem/index';
-@import '../../../../styles/typography/index.scss';
-
 .TopFormBarItem {
     background-color: rgba(0, 0, 0, 0.08);
     border-radius: 4px;
-    padding: 0px 24px 0px 24px;
+    padding: 0px 24px;
     height: 28px;
-    color: $content-presentation-global-primary;
+    color: var(--content-presentation-global-primary);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,18 +13,18 @@
     transition: all 300ms ease-in-out;
 
     &:hover {
-        background-color: $background-presentation-tab-acton-hover;
+        background-color: var(--background-presentation-tab-acton-hover);
     }
 
     &:focus {
-        outline: 1px solid $border-presentation-tab-action-selected;
-        background: $background-presentation-tab-action-selected;
-        color: $content-presentation-tab-action-selected;
+        outline: 1px solid var(--border-presentation-tab-action-selected);
+        background: var(--background-presentation-tab-action-selected);
+        color: var(--content-presentation-tab-action-selected);
     }
 
     &:active {
-        outline: 1px solid $border-presentation-tab-action-selected;
-        background: $background-presentation-tab-action-selected;
-        color: $content-presentation-tab-action-selected;
+        outline: 1px solid var(--border-presentation-tab-action-selected);
+        background: var(--background-presentation-tab-action-selected);
+        color: var(--content-presentation-tab-action-selected);
     }
 }
